--- a/Data_Visualisation.ipynb
+++ b/Data_Visualisation.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "b8bfef01",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Data Visualisation"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "1f55b63f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Import libraries"
    ]
@@ -20,7 +28,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "7de733d4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -32,7 +44,11 @@
   {
    "cell_type": "markdown",
    "id": "6f32dc0d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Import file"
    ]
@@ -41,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "8d796b37",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -354,7 +374,11 @@
   {
    "cell_type": "markdown",
    "id": "3140c477",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Information"
    ]
@@ -363,7 +387,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a9bf9003",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -403,7 +431,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "4cb466f0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -573,7 +605,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c9301a74",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -593,7 +629,11 @@
   {
    "cell_type": "markdown",
    "id": "34581f9a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Transform data"
    ]
@@ -602,7 +642,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "1bf7c638",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -917,7 +961,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "00cd3497",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1229,7 +1277,11 @@
   {
    "cell_type": "markdown",
    "id": "4db1b71f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Create scatterplot"
    ]
@@ -1238,7 +1290,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "12771d25",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1263,7 +1319,11 @@
   {
    "cell_type": "markdown",
    "id": "4fd64adb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Create boxplot of altitude"
    ]
@@ -1272,7 +1332,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "8947ca2c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1297,7 +1361,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "3a23cc3c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1322,7 +1390,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "bde2ad0c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1341,7 +1413,11 @@
   {
    "cell_type": "markdown",
    "id": "0cdaea86",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Pie Chart of On-Ground Status"
    ]
@@ -1350,7 +1426,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "abc71632",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1374,7 +1454,11 @@
   {
    "cell_type": "markdown",
    "id": "065ebac5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Create boxplot of ground speed"
    ]
@@ -1383,7 +1467,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "f0b5ab6e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1408,7 +1496,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "dbee9e73",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1427,7 +1519,11 @@
   {
    "cell_type": "markdown",
    "id": "55b0548f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Histogram of altitude"
    ]
@@ -1436,7 +1532,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "73da0565",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1462,7 +1562,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "7817e2dc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Histogram of altitude with logaritmic scale"
@@ -1472,7 +1576,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "8583d9ba",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1498,7 +1606,11 @@
   {
    "cell_type": "markdown",
    "id": "917ef663",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Time series of baro altitude"
    ]
@@ -1507,7 +1619,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "4ac7ade8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1545,7 +1661,11 @@
   {
    "cell_type": "markdown",
    "id": "8bcc7637",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Scatterplot of ground speed vs. baro altitude"
    ]
@@ -1555,7 +1675,10 @@
    "execution_count": 19,
    "id": "af71dbf6",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1581,7 +1704,11 @@
   {
    "cell_type": "markdown",
    "id": "b4c0a8c2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Boxplot of vertical rate"
    ]
@@ -1590,7 +1717,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "cc960a53",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1615,7 +1746,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "3d76da9a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1634,7 +1769,11 @@
   {
    "cell_type": "markdown",
    "id": "8ca79a4f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Violinplot of vertical rate"
    ]
@@ -1643,7 +1782,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "ca8fd33f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "drempel = 10000\n",
@@ -1656,7 +1799,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "26fdfc08",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1685,7 +1832,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "33e2daee",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -1693,7 +1844,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8346f9ab",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -1701,7 +1856,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6df5afba",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
