added comments and removed unneccesary files

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -44,8 +44,9 @@
     }
    ],
    "source": [
+    "# Loading the merged flights from Data_Merging.ipynb\n",
     "flights_df = pd.read_csv('Datasets/Merged_Flights.csv')\n",
-    "flights_df.shape"
+    "flights_df.shape # Displaying the shape (rows, columns) of the DataFrame"
    ]
   },
   {
@@ -69,9 +70,11 @@
     }
    ],
    "source": [
+    "# Removing duplicate rows based on 'icao24' and 'last_position' columns\n",
     "flights_df.drop_duplicates(subset=['icao24', 'last_position'], inplace = True)\n",
+    "# Keeping only important columns\n",
     "flights_df = flights_df[['timestamp', 'icao24', 'latitude', 'longitude', 'ground_speed', 'track', 'vertical_rate', 'baro_altitude']]\n",
-    "flights_df.shape"
+    "flights_df.shape # Displaying the updated shape of the DataFrame"
    ]
   },
   {
@@ -95,11 +98,11 @@
     }
    ],
    "source": [
-    "\n",
+    "# Filtering the DataFrame based on longitude, barometric altitude, and vertical rate\n",
     "flights_df = flights_df[(flights_df['longitude'] <= 20) & (flights_df['longitude'] >= -20)]\n",
     "flights_df = flights_df[(flights_df['baro_altitude'] >= 10000) & (flights_df['baro_altitude'] <= 50000)]\n",
     "flights_df = flights_df[(flights_df['vertical_rate'] >= -4500) & (flights_df['vertical_rate'] <= 4500)]\n",
-    "flights_df.shape"
+    "flights_df.shape # Displaying the shape after filtering"
    ]
   },
   {
@@ -123,9 +126,8 @@
     }
    ],
    "source": [
-    "# Convert 'timestamp' and 'last_position' to datetime\n",
-    "flights_df['timestamp'] = pd.to_datetime(flights_df['timestamp'])\n",
-    "flights_df.shape"
+    "# Converting the 'timestamp' column to datetime format\n",
+    "flights_df['timestamp'] = pd.to_datetime(flights_df['timestamp'])"
    ]
   },
   {
@@ -158,6 +160,7 @@
     }
    ],
    "source": [
+    "# Checking for missing values and displaying the shape of the DataFrame\n",
     "flights_df.isnull().sum(), flights_df.shape"
    ]
   },
@@ -191,7 +194,9 @@
     }
    ],
    "source": [
+    "# Dropping rows with missing values\n",
     "flights_df.dropna(inplace = True)\n",
+    "# Checking again for missing values and displaying the shape of the DataFrame\n",
     "flights_df.isnull().sum(), flights_df.shape"
    ]
   },
@@ -200,6 +205,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Sorting the DataFrame by 'icao24' and then 'timestamp'\n",
     "flights_df_sorted = flights_df.sort_values(by=['icao24', 'timestamp'])"
    ],
    "metadata": {
@@ -216,7 +222,7 @@
    "source": [
     "# Downsampling the dataset by keeping one in every 120 data points\n",
     "downsampled_df = flights_df_sorted.iloc[::120, :]\n",
-    "downsampled_df.shape"
+    "downsampled_df.shape # Displaying the shape of the downsampled DataFrame"
    ],
    "metadata": {
     "collapsed": false,
@@ -232,7 +238,7 @@
    "source": [
     "# Function to find the row with the closest timestamp to the target time\n",
     "def find_first_future_row(df, target_time, icao24):\n",
-    "    # finds the first row that matches the original row time + 10 minutes\n",
+    "    # finds the first row that matches the original row time + 10-12 minutes\n",
     "    future_rows = df[(df['icao24'] == icao24) & (df['timestamp'] >= target_time) & (df['timestamp'] <= target_time + timedelta(minutes=2))]\n",
     "    # returns the row if it exists, otherwise returns None (to filter nan values if no future point exists)\n",
     "    return future_rows.iloc[0] if not future_rows.empty else None\n",
@@ -244,10 +250,12 @@
     "\n",
     "rows = downsampled_df.shape[0]\n",
     "n=0\n",
-    "# Iterating over each row in the subset\n",
+    "\n",
+    "# Looping through each row to find future position and altitude\n",
     "for index, row in downsampled_df.iterrows():\n",
     "    future_time = row['timestamp'] + timedelta(minutes=10)\n",
     "    future_row = find_first_future_row(downsampled_df, future_time, row['icao24'])\n",
+    "    # if the future row is found then the rows are added to the dataframe\n",
     "    if future_row is not None:\n",
     "        downsampled_df.at[index, 'latitude_in_10min'] = future_row['latitude']\n",
     "        downsampled_df.at[index, 'longitude_in_10min'] = future_row['longitude']\n",
@@ -274,7 +282,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "downsampled_df.dropna(inplace = True)"
+    "downsampled_df.dropna(inplace = True) # Dropping rows with missing values in the downsampled DataFrame"
    ],
    "metadata": {
     "collapsed": false,
@@ -288,6 +296,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Adding new columns to classify flights based on their vertical rate\n",
     "downsampled_df['Climbing'] = downsampled_df['vertical_rate'] > 0\n",
     "downsampled_df['Descending'] = downsampled_df['vertical_rate'] < 0\n",
     "downsampled_df['Cruise'] = downsampled_df['vertical_rate'] == 0"
@@ -304,6 +313,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Displaying the updated DataFrame\n",
     "downsampled_df"
    ],
    "metadata": {
@@ -318,6 +328,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Saving\n",
     "downsampled_df.to_csv('Datasets/Cleaned_prepared_data.csv')"
    ],
    "metadata": {
