--- a/Data_Merging.ipynb
+++ b/Data_Merging.ipynb
@@ -24,20 +24,27 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
+    "# Define a function to load CSV files from a specified folder and merge them into a single DataFrame\n",
     "def load_csv(folder_path):\n",
-    "    dataframes = []\n",
-    "    file = 1\n",
+    "    dataframes = [] # List to store individual DataFrames\n",
+    "    file = 1 # Counter for file numbering in print statements\n",
     "\n",
+    "    # Loop through each file in the directory\n",
     "    for filename in os.listdir(path):\n",
+    "        # Check if the file is a CSV\n",
     "        if filename.endswith('.csv'):\n",
+    "            # Create full file path\n",
     "            file_path = os.path.join(folder_path, filename)\n",
+    "            # Read the CSV file into a DataFrame\n",
     "            df = pd.read_csv(file_path)\n",
+    "            # Add the DataFrame to the list\n",
     "            dataframes.append(df)\n",
+    "            # Print a message indicating completion of file loading\n",
     "            print(\"File\", file, \"complete\")\n",
     "            file += 1\n",
-    "\n",
+    "    # Concatenate all DataFrames in the list into a single DataFrame\n",
     "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
-    "    return combined_df"
+    "    return combined_df # Return the combined DataFrame"
    ],
    "metadata": {
     "collapsed": false,
@@ -222,8 +229,11 @@
     }
    ],
    "source": [
+    "# Specify the path to the folder containing CSV files\n",
     "path = \"Datasets/Flights\"\n",
+    "# Load all CSV files from the specified folder and combine them\n",
     "df = load_csv(path)\n",
+    "# Print a message indicating successful loading and combination of files\n",
     "print(path, \"loaded into one df.\")"
    ],
    "metadata": {
@@ -238,6 +248,7 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
+    "# Save the combined DataFrame to a new CSV file\n",
     "df.to_csv('Datasets/Merged_Flights.csv')"
    ],
    "metadata": {
@@ -265,6 +276,7 @@
     }
    ],
    "source": [
+    "# Display the combined DataFrame\n",
     "df"
    ],
    "metadata": {
