--- a/Model1_Linear_Regression.ipynb
+++ b/Model1_Linear_Regression.ipynb
@@ -34,6 +34,7 @@
     }
    ],
    "source": [
+    "# Loading the prepared data from the CSV file into a DataFrame\n",
     "data = pd.read_csv('Datasets/Cleaned_prepared_data.csv')\n",
     "data"
    ],
@@ -62,13 +63,11 @@
     "features = data[['latitude', 'longitude', 'baro_altitude']]\n",
     "targets = data[['latitude_in_10min', 'longitude_in_10min', 'baro_altitude_in_10min']]\n",
     "\n",
-    "# Splitting the dataset into training and testing sets\n",
+    "# Splitting the dataset into training (80%) and testing (20%) sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, targets, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Creating a Linear Regression model\n",
+    "# Creating and training the Linear Regression model\n",
     "linear_model = LinearRegression()\n",
-    "\n",
-    "# Training the model\n",
     "linear_model.fit(X_train, y_train)\n",
     "\n",
     "# The model is now trained and can be used for predictions\n",
@@ -99,12 +98,13 @@
     "train_predictions = linear_model.predict(X_train)\n",
     "test_predictions = linear_model.predict(X_test)\n",
     "\n",
-    "# Evaluating the model\n",
+    "# Evaluating the model performance using Mean Absolute Error (MAE) and R-squared (R2) metrics\n",
     "mae_train = mean_absolute_error(y_train, train_predictions)\n",
     "mae_test = mean_absolute_error(y_test, test_predictions)\n",
     "r2_train = r2_score(y_train, train_predictions)\n",
     "r2_test = r2_score(y_test, test_predictions)\n",
     "\n",
+    "# Displaying the evaluation metrics\n",
     "(mae_train, mae_test, r2_train, r2_test)"
    ],
    "metadata": {
@@ -189,15 +189,10 @@
     "# Actual positions for comparison\n",
     "actual_positions = y_test.loc[sample_indices]\n",
     "\n",
-    "# Visualization\n",
+    "# Visualizing predicted vs actual positions\n",
     "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Plotting predicted positions\n",
-    "plt.scatter(predicted_positions[:, 1], predicted_positions[:, 0], color='blue', label='Predicted Positions')\n",
-    "\n",
-    "# Plotting actual positions\n",
-    "plt.scatter(actual_positions['longitude_in_10min'], actual_positions['latitude_in_10min'], color='red', label='Actual Positions')\n",
-    "\n",
+    "plt.scatter(predicted_positions[:, 1], predicted_positions[:, 0], color='blue', label='Predicted Positions') # Plotting predicted positions\n",
+    "plt.scatter(actual_positions['longitude_in_10min'], actual_positions['latitude_in_10min'], color='red', label='Actual Positions') # Plotting actual positions\n",
     "plt.xlabel('Longitude')\n",
     "plt.ylabel('Latitude')\n",
     "plt.title('Predicted vs Actual Positions')\n",
@@ -249,6 +244,7 @@
     "    'Altitude Error': np.abs(actual_values['baro_altitude_in_10min'] - predictions[:, 2])\n",
     "})\n",
     "\n",
+    "# display the dataframe\n",
     "comparison.reset_index(drop=True, inplace=True)\n",
     "comparison"
    ],
